# hak

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  rust-toolchain.toml  x.py
.cargo/: config.toml
arch/riscv/src/: registers.rs
bootloader/src/: lib.rs
crates/arch/riscv/src/: lib.rs
crates/hak/: Cargo.toml
crates/hak/src/: buffer.rs  cpu.rs  elf.rs  fs.rs  main.rs  plic.rs  process.rs  sched.rs  syscall.rs
crates/hak/src/virtio/: block.rs
crates/klog/: Cargo.toml
klog/: Cargo.toml
klog/src/: lib.rs
src/: assembly.rs  buffer.rs  cpu.rs  elf.rs  fs.rs  kmem.rs  lib.rs  lock.rs  main.rs  page.rs  plic.rs  process.rs  sched.rs  serial.rs  syscall.rs  test.rs  trap.rs  uart.rs
src/virtio/: block.rs  gpu.rs  input.rs  mod.rs  rng.rs
xtask/: Cargo.toml
xtask/src/: main.rs  utils.rs
xtask/src/subcommands/: build.rs  check.rs  image.rs  mod.rs  run.rs
