
[package]
name = "hak"
version = "0.1.0"
authors = ["remimimimi <valent.xarin@gmail.com>"]
edition = "2018"

[dependencies]
arch = { path = "../arch" }
spin = "0.9.0"
uart_16550 = { path = "../drivers/uart_16550" }
# klog = { path = "klog" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bootloader = { path = "../bootloader" }

[package.metadata.bootloader]
map-physical-memory = true

[workspace]
members = [
    "klog",
    "xtask",
]

[profile.dev]
opt-level = 0
lto = false
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
