[package]
name = "hak"
version = "0.1.0"
authors = ["remimimimi <valent.xarin@gmail.com>"]
edition = "2018"

[dependencies]
arch = { path = "../arch" }
spin = { version = "0.9.0", features = ["mutex", "spin_mutex"], default-features = false }
uart_16550 = { path = "../drivers/serial/uart_16550" }
bootloader = { path = "../bootloader" }
logist = { path = "../logist", default-features = false }
klog = { path = "klog" }

[package.metadata.bootloader]
map-physical-memory = true

[workspace]
members = [
    "klog",
]

[profile.dev]
opt-level = 0
lto = false
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
