[package]
name = "klog"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hashbrown = "0.11.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
owo-colors = "2.0.0" # NOTE: replace with https://lib.rs/crates/cansi?
logist = { path = "../../logist", default-features = false }
spin = { version = "0.9.0", features = ["spin_mutex"], default-features = false }
uart_16550 = { path = "../../drivers/serial/uart_16550" }
arch = { path = "../../arch" }
# tracing = { version = "0.1.26", default-features = false }
