[package]
name = "hak"
version = "0.1.0"
authors = ["remimimimi <valent.xarin@gmail.com>"]
edition = "2018"

[dependencies]
klog = { path = "../klog" }
uart = { path = "../../../drivers/uart/" }
tracing = { version = "0.1.26", default-features = false }

[target.riscv64gc-unknown-none-elf.dependencies]
riscv = { path = "../arch/riscv" }

# [dependencies]
# packed_struct = { version = "0.5.0", default-features = false }
